# ignis

./: .gitignore  .rustfmt.toml  Cargo.toml  IR.txt  LICENSE  README.md  main
analizer/: Cargo.toml
analyzer/: Cargo.toml
analyzer/src/: analyzer_error.rs  analyzer_value.rs  debug.rs  lib.rs
analyzer/src/ir/: instruction_type.rs  mod.rs
analyzer/src/ir/instruction/: assign.rs  binary.rs  block.rs  call.rs  class.rs  class_instance.rs  function.rs  import.rs  ir_array.rs  ir_break.rs  ir_continue.rs  ir_for_in.rs  ir_get.rs  ir_if.rs  ir_return.rs  ir_set.rs  ir_while.rs  literal.rs  logical.rs  mod.rs  ternary.rs  unary.rs  variable.rs
ast/: Cargo.toml
ast/src/: lib.rs  visitor.rs
ast/src/expression/: array.rs  assign.rs  binary.rs  call.rs  get.rs  literal.rs  logical.rs  method_call.rs  mod.rs  new.rs  set.rs  ternary.rs  unary.rs  variable.rs
ast/src/statement/: break_statement.rs  class.rs  continue_statement.rs  expression.rs  for_in.rs  function.rs  if_statement.rs  import.rs  method.rs  mod.rs  property.rs  return_statement.rs  variable.rs
bytecode_generator/: Cargo.toml
bytecode_generator/src/: debug.rs  lib.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
diagnostic/: Cargo.toml
diagnostic/src/: error.rs  lib.rs
enums/src/: data_type.rs  lib.rs  literal_value.rs  token_type.rs
evaluator/: Cargo.toml
evaluator/src/: environment.rs  evaluator_error.rs  evaluator_value.rs  execution_error.rs  lib.rs
evaluator/src/callable/: function.rs  mod.rs  print.rs
example/: array.ign  arrow_function.ign  backend_c.ign  class.ign  class_main.ign  enum.ign  extern.ign  fibonacci.ign  for.ign  function.ign  if.ign  main.ign  math.ign  switch.ign  template_literals.ign  ternary.ign  variable.ign
example/math/src/: factorial.ign  isEven.ign  main.ign  math.ign  sum.ign
ignis/: Cargo.toml
ignis-compiler/: Cargo.toml
ignis-compiler/example/: function.ign  if.ign  main.ign  return.ign  ternary.ign  variable.ign
ignis-compiler/src/: main.rs
ignis-compiler/src/ast/: data_type.rs  environment.rs  evaluator.rs  execution_error.rs  lexer.rs  mod.rs  parser.rs  text_span.rs  token.rs  token_type.rs  visitor.rs
ignis-compiler/src/ast/callable/: function.rs  mod.rs  print.rs
ignis-compiler/src/ast/expression/: assign.rs  binary.rs  call.rs  grouping.rs  literal.rs  logical.rs  mod.rs  ternary.rs  unary.rs  variable.rs
ignis-compiler/src/ast/lexer/: mod.rs  text_span.rs  token.rs  token_type.rs
ignis-compiler/src/ast/statement/: block.rs  expression.rs  function.rs  if_statement.rs  mod.rs  return_statement.rs  variable.rs  while_statement.rs
ignis-compiler/src/diagnostic/: error.rs  mod.rs
ignis-compiler/src/enums/: mod.rs
ignis-compiler/src/evaluator/: environment.rs  execution_error.rs  mod.rs
ignis-compiler/src/evaluator/callable/: function.rs  mod.rs  print.rs
ignis/src/: main.rs
ignis_backend/: Cargo.toml
ignis_backend/bytecode_generator/: Cargo.toml
ignis_backend/bytecode_generator/src/: lib.rs
ignis_backend/src/: lib.rs
ignis_backend/to_lua/: Cargo.toml
ignis_backend/to_lua/src/: lib.rs
ignis_common/enums/: Cargo.toml
ignis_common/enums/src/: data_type.rs  function_kind.rs  literal_value.rs  token_type.rs
ignis_data_struct/ast/: Cargo.toml
ignis_data_struct/ast/src/: lib.rs
ignis_data_struct/ast/src/expression/: array.rs  assign.rs  binary.rs  call.rs  grouping.rs  logical.rs  mod.rs  ternary.rs  unary.rs  variable.rs
ignis_data_struct/ast/src/statement/: break_statement.rs  class.rs  continue_statement.rs  for_in.rs  for_statement.rs  function.rs  import.rs  mod.rs  return_statement.rs  variable.rs  while_statement.rs
ignis_data_struct/diagnostic_report/: Cargo.toml
ignis_data_struct/diagnostic_report/src/: lib.rs
ignis_data_struct/intermediate_representation/: Cargo.toml
ignis_data_struct/intermediate_representation/src/: analyzer_value.rs  assign.rs  binary.rs  block.rs  call.rs  class.rs  function.rs  import.rs  instruction_type.rs  ir_array.rs  ir_break.rs  ir_continue.rs  ir_for_in.rs  ir_if.rs  ir_return.rs  ir_while.rs  lib.rs  literal.rs  logical.rs  ternary.rs  unary.rs  variable.rs
ignis_data_struct/token/: Cargo.toml
ignis_data_struct/token/src/: lib.rs  text_span.rs  token.rs
ignis_frontend/: Cargo.toml
ignis_frontend/analyzer/: Cargo.toml
ignis_frontend/analyzer/src/: debug.rs  diagnostic.rs  lib.rs
ignis_frontend/lexer/: Cargo.toml
ignis_frontend/lexer/src/: lib.rs
ignis_frontend/lexer/tests/: mod.rs
ignis_frontend/parser/: Cargo.toml
ignis_frontend/parser/src/: lib.rs  parser_diagnostic.rs
ignis_frontend/src/: lib.rs
ignisc/: Cargo.toml
ignisc/src/: cli.rs  main.rs
ignisc/src/diagnostic/: error.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  text_span.rs  token.rs
parser/: Cargo.toml
parser/src/: lib.rs
src/: cli.rs  main.rs
src/diagnostic/: mod.rs
to-lua/: Cargo.toml
to-lua/src/: lib.rs
to_c/: Cargo.toml
to_c/src/: lib.rs
to_lua/: Cargo.toml
to_lua/src/: lib.rs
