[package]
name = "ignis-lan"
version = "0.1.0"
edition = "2021"

[workspace.package]
authors = ["Ignacio Perez <ignacio.perez2123@protonmail.com>"]
description = "My programming language written in rust"
keywords = ["programming", "language", "compiler", "interpreter"]
license = "MIT"
repository = "https://github.com/BasiluesErwin/ignis-lang"

[[bin]]
name = "ignisc"
path = "./ignisc/src/main.rs"

[dependencies]
ast = { path = "./ast" }
parser = { path = "./parser" }
enums = { path = "./enums" }
lexer = { path = "./lexer" }
analyzer = { path = "./analyzer" }
diagnostic = { path = "./diagnostic" }
to_lua = { path = "./to_lua" }
bytecode_generator = { path = "./bytecode_generator" }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[workspace]
members = [
	"ignisc",
	"lexer",
	"parser",
	"ast",
	"analyzer",
	"enums",
	"diagnostic",
	"to_lua",
	"bytecode_generator",
]
