[package]
name = "ignis-lang"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ignis"
path = "./ignis/src/main.rs"

[workspace]
members = [
  "ignis",
  "diagnostic",

  "ignis_backend",

  "ignis_frontend",

  "ignis_common/enums",

  "ignis_data_struct/ast",
  "ignis_data_struct/intermediate_representation",
  "ignis_data_struct/token",
  "ignis_data_struct/diagnostic_report",
]

exclude = ["build", "test/**/*.rs", "example"]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
clap = { version = "4.4.8", features = ["derive"] }

[workspace.package]
authors = ["Ignacio Perez <ignacio.perez2123@protonmail.com>"]
description = "My programming language written in rust"
keywords = ["programming", "language", "compiler", "interpreter"]
license = "MIT"
repository = "https://github.com/BasiluesErwin/ignis-lang"
