[package]
name = "ignis"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2"
ignis_frontend = { path = "./ignis_frontend" }
ignis_backend = { path = "./ignis_backend" }
diagnostic = { path = "./diagnostic" }
diagnostic_report = { path = "./ignis_data_struct/diagnostic_report" }

[workspace]
members = [
  "diagnostic",

  "ignis_backend",

  "ignis_frontend",

  "ignis_common/enums",

  "ignis_data_struct/ast",
  "ignis_data_struct/intermediate_representation",
  "ignis_data_struct/token",
  "ignis_data_struct/diagnostic_report",
]

exclude = ["build", "test/**/*.rs", "example"]

[workspace.package]
authors = ["Ignacio Perez <ignacio.perez2123@protonmail.com>"]
description = "My programming language written in rust"
keywords = ["programming", "language", "compiler", "interpreter"]
license = "MIT"
repository = "https://github.com/BasiluesErwin/ignis-lang"
