[package]
name = "ignis_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bytecode_generator = { path = "./bytecode_generator" }
to_lua = { path = "./to_lua" }
intermediate_representation = { path = "../ignis_data_struct/intermediate_representation" }
diagnostic_report  = { path = "../ignis_data_struct/diagnostic_report" }
