[package]
name = "ignis_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
lexer = { path = "./lexer" }
parser = { path = "./parser" }
analyzer = { path = "./analyzer" }
ast = { path = "../ignis_data_struct/ast" }
diagnostic = { path = "../diagnostic" }
intermediate_representation = { path = "../ignis_data_struct/intermediate_representation" }
diagnostic_report  = { path = "../ignis_data_struct/diagnostic_report" }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
