[package]
name = "ignisc"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
enums = { path = "../enums" }
lexer = { path = "../lexer" }
analyzer = { path = "../analyzer" }
evaluator = { path = "../evaluator" }
compiler = { path = "../compiler" }
diagnostic = { path = "../diagnostic" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
