[package]
name = "ignisc"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
enums = { path = "../enums" }
lexer = { path = "../lexer" }
analyzer = { path = "../analyzer" }
evaluator = { path = "../evaluator" }
diagnostic = { path = "../diagnostic" }
to-lua = { path = "../to-lua" }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
