[package]
name = "ignisc"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
enums = { path = "../enums" }
lexer = { path = "../lexer" }
analyzer = { path = "../analyzer" }
diagnostic = { path = "../diagnostic" }
to_lua = { path = "../to_lua" }
to_c = { path = "../to_c" }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
clap = { version = "4.4.8", features = ["derive"] }
