[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../../ignis_data_struct/ast" }
token = { path = "../../ignis_data_struct/token" }
enums = { path = "../../ignis_common/enums" }
parser = { path = "../parser" }
intermediate_representation = { path = "../../ignis_data_struct/intermediate_representation" }
diagnostic_report  = { path = "../../ignis_data_struct/diagnostic_report" }
lexer = { path = "../lexer" }
